<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Alberto Alarcón López.</b></string>
    <string name="accept">Aceptar</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="guide_1">Prepárate para explorar el mundo mágico de esta aplicación inspirada en</string>
    <string name="guide_2">Aquí aprenderás a navegar por pestañas llenas de dragones, mundos fascinantes y montones de tesoros brillantes</string>
    <string name="guide_3">¿Listo para empezar?</string>
    <string name="guide_4">Pulsa \"Comenzar\" y deja que Spyro te lleve volando a través de esta guía interactiva</string>
    <string name="guide_boton">Comenzar</string>
    <string name="bocadillo_personajes">Aquí podrás explorar \na todos los personajes \ndel mundo de Spyro</string>
    <string name="saltar_guia">Saltar guia</string>
    <string name="siguiente">Siguiente</string>
    <string name="guide_mundos">Aquí podrás descubrir \ntodos los maravillos mundos\n en los que Spyro vivirá\n sus aventuras</string>
    <string name="guide_coleccionables">El mundo de Spyro tiene\n muchos tesoros\n coleccionables, descubrelos\n todos aquí</string>
    <string name="guide_informacion">Aqui podrás consultar\n informacion acerca \nde la aplicacion.</string>
    <string name="terminar">TERMINAR</string>
    <string name="guide_final">Hemos aprendido donde consultar los personajes, los mundos y los coleccionables de Spyro, también hemos aprendido donde consultar quien ha desarrollado la aplicación (soy yo... jijijiji), pulsa \"Terminar\" para continuar usando la aplicación</string>
    <string name="listos">¡LISTOS!</string>
</resources>