<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_transparent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/guideLayout"
    android:padding="10dp"
    android:visibility="gone">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/alatsi_regular"
        android:text="@string/bienvenido"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/guide_1"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="315dp"
        android:layout_height="212dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/guide_2"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/guide_3"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_4"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="20dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/diamond"/>

        <Button
            android:id="@+id/boton_comenzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guide_boton"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"/>
    </FrameLayout>
</LinearLayout>