<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/guideLayoutColeccionables"
    android:visibility="gone">

    <FrameLayout
        android:id="@+id/bocadillo_coleccionables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="95dp"
            android:src="@drawable/bocadillo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="110dp"
            android:layout_marginEnd="10dp"
            android:text="@string/guide_coleccionables" />

        <ImageView
            android:id="@+id/circulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/circulo_menu"/>

    </FrameLayout>

    <Button
        android:id="@+id/boton_saltar"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/saltar_guia" />

    <Button
        android:id="@+id/boton_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="140dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/siguiente" />
</FrameLayout>